--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dependencies": {
         "@coreui/icons": "^2.1.0",
         "@coreui/icons-vue": "^2.0.0",
-        "@coreui/vue": "^4.3.0"
+        "@coreui/vue": "^4.3.0",
+        "vue-sweetalert2": "^5.0.5"
     }
 }
