--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,12 @@
         "laravel/jetstream": "^2.8",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "midtrans/midtrans-php": "^2.5",
         "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "jn-jairo/laravel-ngrok": "^2.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nascent-africa/jetstrap": "^2.5",
