--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "midtrans/midtrans-php": "^2.5",
+        "seblhaire/daterangepickerhelper": "^2.1",
         "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
