--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/dashboard.js": "/js/dashboard.js",
+    "/js/daterangepicker.js": "/js/daterangepicker.js",
     "/css/dashboard.css": "/css/dashboard.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/daterangepicker.css": "/css/daterangepicker.css"
 }
